Update lists at 20240718-0000

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -9,12 +9,11 @@ allow 103.172.134.26;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
+allow 103.251.167.10;
 allow 103.251.167.20;
 allow 103.253.24.18;
 allow 103.28.52.93;
 allow 104.167.242.116;
-allow 104.167.242.117;
-allow 104.167.242.118;
 allow 104.192.1.138;
 allow 104.192.3.74;
 allow 104.219.232.126;
@@ -23,6 +22,7 @@ allow 104.244.72.115;
 allow 104.244.72.132;
 allow 104.244.73.136;
 allow 104.244.73.190;
+allow 104.244.73.193;
 allow 104.244.73.43;
 allow 104.244.74.23;
 allow 104.244.74.97;
@@ -81,6 +81,7 @@ allow 107.189.7.161;
 allow 107.189.7.168;
 allow 107.189.7.47;
 allow 107.189.8.133;
+allow 107.189.8.136;
 allow 107.189.8.181;
 allow 107.189.8.226;
 allow 107.189.8.238;
@@ -131,9 +132,7 @@ allow 141.98.119.106;
 allow 142.44.133.81;
 allow 142.44.234.69;
 allow 143.110.156.176;
-allow 144.172.118.4;
 allow 144.172.118.47;
-allow 144.172.118.55;
 allow 144.172.118.76;
 allow 144.172.118.90;
 allow 144.24.197.112;
@@ -191,6 +190,7 @@ allow 172.105.161.162;
 allow 172.232.164.52;
 allow 172.235.29.198;
 allow 172.81.131.139;
+allow 172.81.131.156;
 allow 172.81.132.94;
 allow 173.249.57.253;
 allow 176.118.193.33;
@@ -230,10 +230,6 @@ allow 179.43.159.199;
 allow 179.43.159.200;
 allow 179.43.159.201;
 allow 179.43.159.78;
-allow 179.43.161.171;
-allow 179.43.161.172;
-allow 179.43.161.173;
-allow 179.43.161.174;
 allow 179.43.167.205;
 allow 179.43.182.232;
 allow 179.43.182.58;
@@ -290,8 +286,8 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
+allow 185.165.190.111;
 allow 185.170.114.25;
 allow 185.181.60.135;
 allow 185.181.61.115;
@@ -542,6 +538,7 @@ allow 185.82.219.109;
 allow 185.84.31.254;
 allow 188.165.200.97;
 allow 188.172.228.41;
+allow 188.172.229.15;
 allow 188.214.104.21;
 allow 188.244.106.81;
 allow 188.68.41.191;
@@ -824,6 +821,7 @@ allow 205.185.116.34;
 allow 205.185.117.149;
 allow 205.185.119.35;
 allow 205.185.121.170;
+allow 205.185.123.93;
 allow 205.185.124.176;
 allow 205.185.124.193;
 allow 205.185.127.231;
@@ -853,6 +851,7 @@ allow 217.12.221.131;
 allow 217.146.2.41;
 allow 23.137.248.100;
 allow 23.137.250.34;
+allow 23.137.250.83;
 allow 23.137.253.108;
 allow 23.137.253.109;
 allow 23.137.253.110;
@@ -874,6 +873,7 @@ allow 23.154.177.22;
 allow 23.154.177.23;
 allow 23.154.177.24;
 allow 23.154.177.25;
+allow 23.154.177.26;
 allow 23.154.177.27;
 allow 23.154.177.28;
 allow 23.154.177.29;
@@ -917,13 +917,12 @@ allow 2602:f9f3:0:2::5;
 allow 2602:f9f3:0:2::8d;
 allow 2602:f9f3:0:2::91;
 allow 2602:fc24:12:81a6::1;
+allow 2602:fc24:12:a679::1;
 allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
 allow 2602:fc24:19:eb06::1;
 allow 2602:fccf:310:1::a;
-allow 2602:fccf:310:1::b;
-allow 2602:fccf:310:1::c;
 allow 2602:fef9:100:1100::199;
 allow 2603:c026:c102:5ff:2603:c026:c102:5ff;
 allow 2604:2dc0:202:300::ed3;
@@ -1014,6 +1013,7 @@ allow 2605:6400:30:f671:3fc7:4bb4:ca18:86fa;
 allow 2605:6400:30:f753:891d:ee77:e97c:741a;
 allow 2605:6400:30:f78b::2;
 allow 2605:6400:30:f7c0:8511:b113:ca11:9baa;
+allow 2605:6400:30:f7ca::2;
 allow 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
 allow 2605:6400:30:f805:1e96:b223:fbe5:cfac;
 allow 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
@@ -1024,7 +1024,6 @@ allow 2605:6400:30:f8da:2b2:a293:30ad:506d;
 allow 2605:6400:30:f920:f523:28ef:3617:8b86;
 allow 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 allow 2605:6400:40:fe09::2;
-allow 2605:6400:d814:1b8::4;
 allow 2605:6400:d814:2775::;
 allow 2605:6400:d814:4181::1;
 allow 2605:a140:2186:5418::1;
@@ -1057,6 +1056,7 @@ allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
 allow 2a01:4262:1ab:ffff::133;
 allow 2a01:5e0:36:cf2a::1;
+allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
@@ -1082,6 +1082,7 @@ allow 2a03:4000:21:115:8837:15ff:fe14:64cc;
 allow 2a03:4000:21:8a8:dead:beef:ca1f:1337;
 allow 2a03:4000:27:36:c813:6dff:fe0e:b93e;
 allow 2a03:4000:27:6f8:e466:27ff:fe82:1b2a;
+allow 2a03:4000:28:3e:c4ee:b0ff:fecb:1cde;
 allow 2a03:4000:29:8a9:887f:9eff:feed:9e9;
 allow 2a03:4000:2b:66e:dead:beef:ca1f:1337;
 allow 2a03:4000:37:3:e842:2ff:feb9:c49c;
@@ -1186,6 +1187,7 @@ allow 2a09:6301:0:2e1:b492:c29e:f532:42c6;
 allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 allow 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 allow 2a0a:4cc0:3:bb:7865:65ff:fe6d:7fd4;
+allow 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:13::1;
 allow 2a0b:f4c0:16c:14::1;
@@ -1407,7 +1409,7 @@ allow 31.129.22.65;
 allow 31.13.195.60;
 allow 31.133.0.210;
 allow 31.42.185.134;
-allow 34.202.226.7;
+allow 34.230.200.3;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.1.201.144;
@@ -1533,6 +1535,7 @@ allow 5.255.125.196;
 allow 5.255.125.41;
 allow 5.255.127.222;
 allow 5.255.97.221;
+allow 5.255.98.151;
 allow 5.255.98.198;
 allow 5.255.98.23;
 allow 5.255.99.108;
@@ -1540,6 +1543,7 @@ allow 5.255.99.124;
 allow 5.255.99.147;
 allow 5.255.99.5;
 allow 5.2.67.226;
+allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
@@ -1576,6 +1580,7 @@ allow 74.82.47.194;
 allow 77.105.133.7;
 allow 77.105.146.42;
 allow 77.220.196.253;
+allow 77.221.157.237;
 allow 77.221.159.184;
 allow 77.221.159.189;
 allow 77.221.159.192;
@@ -1702,15 +1707,11 @@ allow 94.140.115.63;
 allow 94.142.241.194;
 allow 94.142.244.16;
 allow 94.158.246.64;
+allow 94.16.112.22;
 allow 94.16.116.81;
 allow 94.16.116.86;
 allow 94.16.121.226;
 allow 94.16.121.91;
-allow 94.177.106.37;
-allow 94.177.106.46;
-allow 94.177.106.54;
-allow 94.177.106.55;
-allow 94.177.106.59;
 allow 94.228.163.25;
 allow 94.228.169.70;
 allow 94.230.208.147;
@@ -1725,4 +1726,5 @@ allow 95.164.46.204;
 allow 95.168.173.143;
 allow 95.211.244.28;
 allow 96.126.98.146;
+allow 96.27.198.133;
 allow 98.128.173.33;
