--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -132,13 +132,12 @@ deny 2602:f9f3:0:2::5;
 deny 2602:f9f3:0:2::8d;
 deny 2602:f9f3:0:2::91;
 deny 2602:fc24:12:81a6::1;
+deny 2602:fc24:12:a679::1;
 deny 2602:fc24:19:1c9::1;
 deny 2602:fc24:19:2b4::1;
 deny 2602:fc24:19:30::1;
 deny 2602:fc24:19:eb06::1;
 deny 2602:fccf:310:1::a;
-deny 2602:fccf:310:1::b;
-deny 2602:fccf:310:1::c;
 deny 2602:fef9:100:1100::199;
 deny 2603:c026:c102:5ff:2603:c026:c102:5ff;
 deny 2604:2dc0:202:300::ed3;
@@ -229,6 +228,7 @@ deny 2605:6400:30:f671:3fc7:4bb4:ca18:86fa;
 deny 2605:6400:30:f753:891d:ee77:e97c:741a;
 deny 2605:6400:30:f78b::2;
 deny 2605:6400:30:f7c0:8511:b113:ca11:9baa;
+deny 2605:6400:30:f7ca::2;
 deny 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
 deny 2605:6400:30:f805:1e96:b223:fbe5:cfac;
 deny 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
@@ -239,7 +239,6 @@ deny 2605:6400:30:f8da:2b2:a293:30ad:506d;
 deny 2605:6400:30:f920:f523:28ef:3617:8b86;
 deny 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 deny 2605:6400:40:fe09::2;
-deny 2605:6400:d814:1b8::4;
 deny 2605:6400:d814:2775::;
 deny 2605:6400:d814:4181::1;
 deny 2605:a140:2186:5418::1;
@@ -271,6 +270,7 @@ deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:99a0:0:1000::2;
 deny 2a01:4262:1ab:ffff::133;
 deny 2a01:5e0:36:cf2a::1;
+deny 2a01:6340:2:501::10;
 deny 2a01:6340:2:501::20;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
@@ -296,6 +296,7 @@ deny 2a03:4000:21:115:8837:15ff:fe14:64cc;
 deny 2a03:4000:21:8a8:dead:beef:ca1f:1337;
 deny 2a03:4000:27:36:c813:6dff:fe0e:b93e;
 deny 2a03:4000:27:6f8:e466:27ff:fe82:1b2a;
+deny 2a03:4000:28:3e:c4ee:b0ff:fecb:1cde;
 deny 2a03:4000:29:8a9:887f:9eff:feed:9e9;
 deny 2a03:4000:2b:66e:dead:beef:ca1f:1337;
 deny 2a03:4000:37:3:e842:2ff:feb9:c49c;
@@ -400,6 +401,7 @@ deny 2a09:6301:0:2e1:b492:c29e:f532:42c6;
 deny 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 deny 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 deny 2a0a:4cc0:3:bb:7865:65ff:fe6d:7fd4;
+deny 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
 deny 2a0b:f4c0:16c:1::1;
 deny 2a0b:f4c0:16c:13::1;
 deny 2a0b:f4c0:16c:14::1;
