Update lists at 20240718-1500

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -314,6 +314,7 @@ deny 185.195.71.8;
 deny 185.195.71.9;
 deny 185.207.107.130;
 deny 185.207.107.216;
+deny 185.220.100.243;
 deny 185.220.101.0;
 deny 185.220.101.1;
 deny 185.220.101.10;
@@ -823,6 +824,7 @@ deny 205.185.127.231;
 deny 209.127.245.250;
 deny 209.135.168.10;
 deny 209.135.168.56;
+deny 209.141.32.181;
 deny 209.141.32.198;
 deny 209.141.37.94;
 deny 209.141.46.203;
@@ -1187,6 +1189,7 @@ deny 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 deny 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 deny 2a0a:4cc0:3:bb:7865:65ff:fe6d:7fd4;
 deny 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
+deny 2a0b:f4c0:16c:13::1;
 deny 2a0b:f4c2::;
 deny 2a0b:f4c2::1;
 deny 2a0b:f4c2::10;
@@ -1400,12 +1403,13 @@ deny 31.129.22.65;
 deny 31.13.195.60;
 deny 31.133.0.210;
 deny 31.42.185.134;
+deny 34.197.185.155;
 deny 35.0.127.52;
-deny 35.153.94.223;
 deny 37.114.41.119;
 deny 37.1.201.144;
 deny 37.120.190.85;
 deny 37.187.5.192;
+deny 37.220.86.167;
 deny 37.228.129.128;
 deny 37.228.129.5;
 deny 37.228.129.63;
@@ -1588,7 +1592,6 @@ deny 77.91.85.147;
 deny 77.91.86.95;
 deny 77.91.87.79;
 deny 78.142.18.219;
-deny 79.102.62.27;
 deny 79.124.8.241;
 deny 79.137.198.213;
 deny 80.210.78.252;
