--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -314,6 +314,7 @@ allow 185.195.71.8;
 allow 185.195.71.9;
 allow 185.207.107.130;
 allow 185.207.107.216;
+allow 185.220.100.243;
 allow 185.220.101.0;
 allow 185.220.101.1;
 allow 185.220.101.10;
@@ -823,6 +824,7 @@ allow 205.185.127.231;
 allow 209.127.245.250;
 allow 209.135.168.10;
 allow 209.135.168.56;
+allow 209.141.32.181;
 allow 209.141.32.198;
 allow 209.141.37.94;
 allow 209.141.46.203;
@@ -1187,6 +1189,7 @@ allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 allow 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 allow 2a0a:4cc0:3:bb:7865:65ff:fe6d:7fd4;
 allow 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
+allow 2a0b:f4c0:16c:13::1;
 allow 2a0b:f4c2::;
 allow 2a0b:f4c2::1;
 allow 2a0b:f4c2::10;
@@ -1400,12 +1403,13 @@ allow 31.129.22.65;
 allow 31.13.195.60;
 allow 31.133.0.210;
 allow 31.42.185.134;
+allow 34.197.185.155;
 allow 35.0.127.52;
-allow 35.153.94.223;
 allow 37.114.41.119;
 allow 37.1.201.144;
 allow 37.120.190.85;
 allow 37.187.5.192;
+allow 37.220.86.167;
 allow 37.228.129.128;
 allow 37.228.129.5;
 allow 37.228.129.63;
@@ -1588,7 +1592,6 @@ allow 77.91.85.147;
 allow 77.91.86.95;
 allow 77.91.87.79;
 allow 78.142.18.219;
-allow 79.102.62.27;
 allow 79.124.8.241;
 allow 79.137.198.213;
 allow 80.210.78.252;
