--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -406,6 +406,7 @@ deny 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 deny 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 deny 2a0a:4cc0:3:bb:7865:65ff:fe6d:7fd4;
 deny 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
+deny 2a0b:f4c0:16c:13::1;
 deny 2a0b:f4c2::;
 deny 2a0b:f4c2::1;
 deny 2a0b:f4c2::10;
