Update lists at 20240718-1800

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -11,7 +11,6 @@ allow 103.196.37.111;
 allow 103.208.86.5;
 allow 103.251.167.10;
 allow 103.251.167.20;
-allow 103.253.24.18;
 allow 103.28.52.93;
 allow 104.167.242.116;
 allow 104.167.242.117;
@@ -155,8 +154,10 @@ allow 149.202.79.129;
 allow 149.56.22.133;
 allow 149.56.44.47;
 allow 151.80.148.159;
+allow 152.53.53.154;
 allow 154.16.116.61;
 allow 154.26.159.157;
+allow 155.138.161.171;
 allow 156.67.111.146;
 allow 160.119.249.240;
 allow 162.19.230.94;
@@ -314,7 +315,14 @@ allow 185.195.71.8;
 allow 185.195.71.9;
 allow 185.207.107.130;
 allow 185.207.107.216;
+allow 185.220.100.240;
+allow 185.220.100.241;
+allow 185.220.100.242;
 allow 185.220.100.243;
+allow 185.220.100.252;
+allow 185.220.100.253;
+allow 185.220.100.254;
+allow 185.220.100.255;
 allow 185.220.101.0;
 allow 185.220.101.1;
 allow 185.220.101.10;
@@ -680,6 +688,7 @@ allow 199.195.253.124;
 allow 199.195.253.156;
 allow 199.195.253.180;
 allow 199.195.253.247;
+allow 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 allow 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 allow 2001:1af8:4060:a01f::12a6;
 allow 2001:1af8:4700:a114:6::1;
@@ -824,7 +833,6 @@ allow 205.185.127.231;
 allow 209.127.245.250;
 allow 209.135.168.10;
 allow 209.135.168.56;
-allow 209.141.32.181;
 allow 209.141.32.198;
 allow 209.141.37.94;
 allow 209.141.46.203;
@@ -1187,9 +1195,17 @@ allow 2a07:e03:2a::bcde;
 allow 2a09:6301:0:2e1:b492:c29e:f532:42c6;
 allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 allow 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
+allow 2a0a:4cc0:2000:2012:f3c1:8a5e:dead:beef;
 allow 2a0a:4cc0:3:bb:7865:65ff:fe6d:7fd4;
 allow 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
+allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:13::1;
+allow 2a0b:f4c0:16c:14::1;
+allow 2a0b:f4c0:16c:15::1;
+allow 2a0b:f4c0:16c:16::1;
+allow 2a0b:f4c0:16c:2::1;
+allow 2a0b:f4c0:16c:3::1;
+allow 2a0b:f4c0:16c:4::1;
 allow 2a0b:f4c2::;
 allow 2a0b:f4c2::1;
 allow 2a0b:f4c2::10;
@@ -1403,7 +1419,6 @@ allow 31.129.22.65;
 allow 31.13.195.60;
 allow 31.133.0.210;
 allow 31.42.185.134;
-allow 34.197.185.155;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.1.201.144;
@@ -1513,7 +1528,6 @@ allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
-allow 5.255.100.26;
 allow 5.255.103.190;
 allow 5.255.103.235;
 allow 5.255.104.202;
