--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -11,7 +11,6 @@ deny 103.196.37.111;
 deny 103.208.86.5;
 deny 103.251.167.10;
 deny 103.251.167.20;
-deny 103.253.24.18;
 deny 103.28.52.93;
 deny 104.167.242.116;
 deny 104.167.242.117;
@@ -155,8 +154,10 @@ deny 149.202.79.129;
 deny 149.56.22.133;
 deny 149.56.44.47;
 deny 151.80.148.159;
+deny 152.53.53.154;
 deny 154.16.116.61;
 deny 154.26.159.157;
+deny 155.138.161.171;
 deny 156.67.111.146;
 deny 160.119.249.240;
 deny 162.19.230.94;
@@ -314,7 +315,14 @@ deny 185.195.71.8;
 deny 185.195.71.9;
 deny 185.207.107.130;
 deny 185.207.107.216;
+deny 185.220.100.240;
+deny 185.220.100.241;
+deny 185.220.100.242;
 deny 185.220.100.243;
+deny 185.220.100.252;
+deny 185.220.100.253;
+deny 185.220.100.254;
+deny 185.220.100.255;
 deny 185.220.101.0;
 deny 185.220.101.1;
 deny 185.220.101.10;
@@ -680,6 +688,7 @@ deny 199.195.253.124;
 deny 199.195.253.156;
 deny 199.195.253.180;
 deny 199.195.253.247;
+deny 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 deny 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 deny 2001:1af8:4060:a01f::12a6;
 deny 2001:1af8:4700:a114:6::1;
@@ -824,7 +833,6 @@ deny 205.185.127.231;
 deny 209.127.245.250;
 deny 209.135.168.10;
 deny 209.135.168.56;
-deny 209.141.32.181;
 deny 209.141.32.198;
 deny 209.141.37.94;
 deny 209.141.46.203;
@@ -1187,9 +1195,17 @@ deny 2a07:e03:2a::bcde;
 deny 2a09:6301:0:2e1:b492:c29e:f532:42c6;
 deny 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 deny 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
+deny 2a0a:4cc0:2000:2012:f3c1:8a5e:dead:beef;
 deny 2a0a:4cc0:3:bb:7865:65ff:fe6d:7fd4;
 deny 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
+deny 2a0b:f4c0:16c:1::1;
 deny 2a0b:f4c0:16c:13::1;
+deny 2a0b:f4c0:16c:14::1;
+deny 2a0b:f4c0:16c:15::1;
+deny 2a0b:f4c0:16c:16::1;
+deny 2a0b:f4c0:16c:2::1;
+deny 2a0b:f4c0:16c:3::1;
+deny 2a0b:f4c0:16c:4::1;
 deny 2a0b:f4c2::;
 deny 2a0b:f4c2::1;
 deny 2a0b:f4c2::10;
@@ -1403,7 +1419,6 @@ deny 31.129.22.65;
 deny 31.13.195.60;
 deny 31.133.0.210;
 deny 31.42.185.134;
-deny 34.197.185.155;
 deny 35.0.127.52;
 deny 37.114.41.119;
 deny 37.1.201.144;
@@ -1513,7 +1528,6 @@ deny 51.91.18.151;
 deny 5.196.8.113;
 deny 5.196.95.34;
 deny 5.255.100.219;
-deny 5.255.100.26;
 deny 5.255.103.190;
 deny 5.255.103.235;
 deny 5.255.104.202;
