--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -156,6 +156,7 @@ allow 151.80.148.159;
 allow 152.53.53.154;
 allow 154.16.116.61;
 allow 154.26.159.157;
+allow 155.138.161.171;
 allow 156.67.111.146;
 allow 160.119.249.240;
 allow 162.19.230.94;
@@ -686,6 +687,7 @@ allow 199.195.253.124;
 allow 199.195.253.156;
 allow 199.195.253.180;
 allow 199.195.253.247;
+allow 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 allow 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 allow 2001:1af8:4060:a01f::12a6;
 allow 2001:1af8:4700:a114:6::1;
@@ -1415,7 +1417,6 @@ allow 31.13.195.60;
 allow 31.133.0.210;
 allow 31.42.185.134;
 allow 35.0.127.52;
-allow 35.173.15.252;
 allow 37.114.41.119;
 allow 37.1.201.144;
 allow 37.120.190.85;
@@ -1524,6 +1525,7 @@ allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
+allow 5.255.100.26;
 allow 5.255.103.190;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1552,6 +1554,7 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
+allow 54.172.119.149;
 allow 5.42.80.232;
 allow 5.42.80.233;
 allow 5.42.80.234;
