Update lists at 20240719-1500

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -25,7 +25,6 @@ allow 2001:41d0:a:fe22::1;
 allow 2001:470:1:908::9001;
 allow 2001:4b20:12:f001::105;
 allow 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
-allow 2001:4b98:dc0:43:f816:3eff:feb8:ae3b;
 allow 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 allow 2001:620:20d0::19;
 allow 2001:620:20d0::20;
@@ -137,7 +136,6 @@ allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
 allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
-allow 2602:fc24:19:eb06::1;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
 allow 2602:fccf:310:1::c;
@@ -145,6 +143,11 @@ allow 2602:fef9:100:1100::199;
 allow 2603:c026:c102:5ff:2603:c026:c102:5ff;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
+allow 2604:a880:400:d0::1744:4001;
+allow 2604:a880:400:d0::1b1c:1;
+allow 2604:a880:400:d0::20fd:1001;
+allow 2604:a880:400:d0::21e4:a001;
+allow 2604:a880:400:d0::238b:e001;
 allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
 allow 2605:6400:10:1008:1111:1111:1111:1111;
