--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -133,6 +133,7 @@ allow 141.98.11.62;
 allow 141.98.119.106;
 allow 142.44.133.81;
 allow 142.44.234.69;
+allow 142.93.6.21;
 allow 143.110.156.176;
 allow 144.172.118.4;
 allow 144.172.118.47;
@@ -145,6 +146,7 @@ allow 146.59.35.246;
 allow 146.59.35.38;
 allow 146.70.164.210;
 allow 146.70.81.186;
+allow 147.182.213.61;
 allow 147.45.116.145;
 allow 147.45.49.17;
 allow 147.45.78.34;
@@ -177,6 +179,7 @@ allow 162.251.5.152;
 allow 163.172.45.102;
 allow 163.5.143.76;
 allow 164.132.172.209;
+allow 165.22.190.0;
 allow 165.73.242.163;
 allow 166.70.207.2;
 allow 171.25.193.20;
@@ -717,7 +720,6 @@ allow 2001:41d0:a:fe22::1;
 allow 2001:470:1:908::9001;
 allow 2001:4b20:12:f001::105;
 allow 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
-allow 2001:4b98:dc0:43:f816:3eff:feb8:ae3b;
 allow 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 allow 2001:620:20d0::19;
 allow 2001:620:20d0::20;
@@ -817,6 +819,7 @@ allow 204.137.14.106;
 allow 204.137.14.92;
 allow 204.194.29.4;
 allow 204.27.64.10;
+allow 204.48.26.215;
 allow 204.8.156.142;
 allow 204.85.191.7;
 allow 204.85.191.8;
@@ -861,7 +864,6 @@ allow 23.137.250.34;
 allow 23.137.250.83;
 allow 23.137.253.108;
 allow 23.137.253.110;
-allow 23.137.253.27;
 allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
@@ -904,6 +906,7 @@ allow 2400:d321:2195:2012::1;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
+allow 24.144.108.118;
 allow 24.240.72.170;
 allow 2.58.56.220;
 allow 2.58.56.248;
@@ -928,7 +931,6 @@ allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
 allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
-allow 2602:fc24:19:eb06::1;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
 allow 2602:fccf:310:1::c;
@@ -936,6 +938,11 @@ allow 2602:fef9:100:1100::199;
 allow 2603:c026:c102:5ff:2603:c026:c102:5ff;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
+allow 2604:a880:400:d0::1744:4001;
+allow 2604:a880:400:d0::1b1c:1;
+allow 2604:a880:400:d0::20fd:1001;
+allow 2604:a880:400:d0::21e4:a001;
+allow 2604:a880:400:d0::238b:e001;
 allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
 allow 2605:6400:10:1008:1111:1111:1111:1111;
@@ -1422,7 +1429,6 @@ allow 31.13.195.60;
 allow 31.133.0.210;
 allow 31.42.185.134;
 allow 35.0.127.52;
-allow 35.174.217.68;
 allow 37.114.41.119;
 allow 37.1.201.144;
 allow 37.120.190.85;
@@ -1505,7 +1511,6 @@ allow 45.95.169.230;
 allow 45.95.169.255;
 allow 46.165.243.36;
 allow 46.182.21.248;
-allow 46.226.105.168;
 allow 46.226.164.14;
 allow 46.232.251.191;
 allow 46.234.47.105;
@@ -1559,6 +1564,7 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
+allow 54.237.119.248;
 allow 5.42.80.232;
 allow 5.42.80.233;
 allow 5.42.80.234;
@@ -1647,7 +1653,6 @@ allow 85.215.76.62;
 allow 85.239.41.130;
 allow 85.93.218.204;
 allow 86.104.194.13;
-allow 86.104.194.27;
 allow 86.104.75.99;
 allow 87.118.110.27;
 allow 87.118.116.103;
