--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -25,7 +25,6 @@ deny 2001:41d0:a:fe22::1;
 deny 2001:470:1:908::9001;
 deny 2001:4b20:12:f001::105;
 deny 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
-deny 2001:4b98:dc0:43:f816:3eff:feb8:ae3b;
 deny 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 deny 2001:620:20d0::19;
 deny 2001:620:20d0::20;
@@ -137,7 +136,6 @@ deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:a679::1;
 deny 2602:fc24:19:2b4::1;
 deny 2602:fc24:19:30::1;
-deny 2602:fc24:19:eb06::1;
 deny 2602:fccf:310:1::a;
 deny 2602:fccf:310:1::b;
 deny 2602:fccf:310:1::c;
@@ -145,6 +143,11 @@ deny 2602:fef9:100:1100::199;
 deny 2603:c026:c102:5ff:2603:c026:c102:5ff;
 deny 2604:2dc0:202:300::ed3;
 deny 2604:6600:0:42::2;
+deny 2604:a880:400:d0::1744:4001;
+deny 2604:a880:400:d0::1b1c:1;
+deny 2604:a880:400:d0::20fd:1001;
+deny 2604:a880:400:d0::21e4:a001;
+deny 2604:a880:400:d0::238b:e001;
 deny 2604:b480:3:6::2;
 deny 2605:2700:0:2:a800:ff:fe39:574;
 deny 2605:6400:10:1008:1111:1111:1111:1111;
