--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -158,6 +158,7 @@ deny 151.80.148.159;
 deny 152.53.53.154;
 deny 154.16.116.61;
 deny 154.26.159.157;
+deny 155.138.161.171;
 deny 156.67.111.146;
 deny 160.119.249.240;
 deny 162.19.230.94;
@@ -290,7 +291,6 @@ deny 185.153.197.227;
 deny 185.154.110.142;
 deny 185.154.110.17;
 deny 185.165.169.239;
-deny 185.165.169.42;
 deny 185.165.171.84;
 deny 185.165.190.111;
 deny 185.170.114.25;
@@ -690,6 +690,7 @@ deny 199.195.253.124;
 deny 199.195.253.156;
 deny 199.195.253.180;
 deny 199.195.253.247;
+deny 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 deny 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 deny 2001:1af8:4060:a01f::12a6;
 deny 2001:1af8:4700:a114:6::1;
@@ -894,6 +895,8 @@ deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.4;
 deny 23.155.24.6;
+deny 23.155.8.104;
+deny 23.23.231.99;
 deny 23.236.122.62;
 deny 23.26.133.152;
 deny 23.94.211.25;
@@ -918,6 +921,7 @@ deny 2600:3c03::f03c:92ff:fed8:d9ef;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c08::f03c:94ff:fef8:9872;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
+deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::5;
@@ -1368,6 +1372,7 @@ deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
+deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
 deny 2a0d:c2c0:1:4::2;
 deny 2a0e:97c0:3ea:372::1;
@@ -1422,7 +1427,8 @@ deny 31.13.195.60;
 deny 31.133.0.210;
 deny 31.42.185.134;
 deny 35.0.127.52;
-deny 35.168.71.229;
+deny 35.207.132.54;
+deny 35.215.211.255;
 deny 37.114.41.119;
 deny 37.1.201.144;
 deny 37.120.190.85;
@@ -1642,6 +1648,7 @@ deny 85.17.9.83;
 deny 85.204.116.92;
 deny 85.204.116.93;
 deny 85.215.76.62;
+deny 85.239.41.130;
 deny 85.93.218.204;
 deny 86.104.194.13;
 deny 86.104.75.99;
