--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -1,3 +1,4 @@
+set_real_ip_from 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 set_real_ip_from 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 set_real_ip_from 2001:1af8:4060:a01f::12a6;
 set_real_ip_from 2001:1af8:4700:a114:6::1;
@@ -370,7 +371,6 @@ set_real_ip_from 2a04:52c0:130:896e::1;
 set_real_ip_from 2a04:52c0:130:d285::1;
 set_real_ip_from 2a04:9dc0:31::c0cc:4d;
 set_real_ip_from 2a05:541:110:20::1;
-set_real_ip_from 2a05:541:110:3e::1;
 set_real_ip_from 2a05:541:112:31::1;
 set_real_ip_from 2a05:541:121:33::1;
 set_real_ip_from 2a05:541:150:6::1;
