Update lists at 20240722-0000

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -20,6 +20,7 @@ deny 2001:41d0:701:1100::38fc;
 deny 2001:41d0:701:1100::4f60;
 deny 2001:41d0:800:1f70::;
 deny 2001:41d0:801:2000::15bb;
+deny 2001:41d0:a:2a61::1;
 deny 2001:41d0:a:5c0::1;
 deny 2001:41d0:a:fe22::1;
 deny 2001:470:1:908::9001;
@@ -123,12 +124,10 @@ deny 2402:1f00:8100:400::9;
 deny 2600:3c00::f03c:91ff:fe73:f9ba;
 deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c00::f03c:93ff:fe2b:34f6;
-deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:92ff:fed8:d9ef;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c08::f03c:94ff:fef8:9872;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
-deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::5;
@@ -250,6 +249,7 @@ deny 2605:6400:d814:4181::1;
 deny 2605:a140:2186:5418::1;
 deny 2605:aa80:0:9::3;
 deny 2607:5300:201:3100::535e;
+deny 2607:5300:203:b45b::;
 deny 2607:5300:205:200::163a;
 deny 2607:5300:205:200::3dde;
 deny 2607:5300:205:200::4894;
