--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,4 +1,3 @@
-allow 100.29.174.220;
 allow 102.130.113.9;
 allow 102.130.117.167;
 allow 102.130.127.117;
@@ -148,6 +147,7 @@ allow 147.182.213.61;
 allow 147.45.116.145;
 allow 147.45.49.17;
 allow 147.45.78.34;
+allow 148.113.152.91;
 allow 149.202.79.101;
 allow 149.202.79.129;
 allow 149.56.22.133;
@@ -713,6 +713,7 @@ allow 2001:41d0:701:1100::38fc;
 allow 2001:41d0:701:1100::4f60;
 allow 2001:41d0:800:1f70::;
 allow 2001:41d0:801:2000::15bb;
+allow 2001:41d0:a:2a61::1;
 allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
 allow 2001:470:1:908::9001;
@@ -934,7 +935,6 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
-allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.26.133.152;
 allow 23.94.211.25;
@@ -955,12 +955,10 @@ allow 2.58.56.90;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:93ff:fe2b:34f6;
-allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
-allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::5;
@@ -1082,6 +1080,7 @@ allow 2605:6400:d814:4181::1;
 allow 2605:a140:2186:5418::1;
 allow 2605:aa80:0:9::3;
 allow 2607:5300:201:3100::535e;
+allow 2607:5300:203:b45b::;
 allow 2607:5300:205:200::163a;
 allow 2607:5300:205:200::3dde;
 allow 2607:5300:205:200::4894;
@@ -1501,14 +1500,14 @@ allow 31.129.22.65;
 allow 31.13.195.60;
 allow 31.133.0.210;
 allow 31.42.185.134;
+allow 3.222.140.87;
 allow 35.0.127.52;
-allow 35.207.185.114;
-allow 35.215.211.255;
 allow 37.114.41.119;
 allow 37.1.201.144;
 allow 37.120.190.85;
 allow 37.120.239.59;
 allow 37.187.5.192;
+allow 37.187.74.97;
 allow 37.220.86.167;
 allow 37.228.129.128;
 allow 37.228.129.5;
@@ -1566,7 +1565,6 @@ allow 45.66.35.20;
 allow 45.66.35.21;
 allow 45.66.35.22;
 allow 45.66.35.35;
-allow 45.79.144.222;
 allow 45.79.177.21;
 allow 45.79.50.161;
 allow 45.80.158.205;
