--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -1,4 +1,3 @@
-set_real_ip_from 100.29.174.220;
 set_real_ip_from 102.130.113.9;
 set_real_ip_from 102.130.117.167;
 set_real_ip_from 102.130.127.117;
@@ -148,6 +147,7 @@ set_real_ip_from 147.182.213.61;
 set_real_ip_from 147.45.116.145;
 set_real_ip_from 147.45.49.17;
 set_real_ip_from 147.45.78.34;
+set_real_ip_from 148.113.152.91;
 set_real_ip_from 149.202.79.101;
 set_real_ip_from 149.202.79.129;
 set_real_ip_from 149.56.22.133;
@@ -713,6 +713,7 @@ set_real_ip_from 2001:41d0:701:1100::38fc;
 set_real_ip_from 2001:41d0:701:1100::4f60;
 set_real_ip_from 2001:41d0:800:1f70::;
 set_real_ip_from 2001:41d0:801:2000::15bb;
+set_real_ip_from 2001:41d0:a:2a61::1;
 set_real_ip_from 2001:41d0:a:5c0::1;
 set_real_ip_from 2001:41d0:a:fe22::1;
 set_real_ip_from 2001:470:1:908::9001;
@@ -934,7 +935,6 @@ set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.4;
 set_real_ip_from 23.155.24.6;
-set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.236.122.62;
 set_real_ip_from 23.26.133.152;
 set_real_ip_from 23.94.211.25;
@@ -955,12 +955,10 @@ set_real_ip_from 2.58.56.90;
 set_real_ip_from 2600:3c00::f03c:91ff:fe73:f9ba;
 set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c00::f03c:93ff:fe2b:34f6;
-set_real_ip_from 2600:3c03::f03c:91ff:fe24:47be;
 set_real_ip_from 2600:3c03::f03c:92ff:fed8:d9ef;
 set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
 set_real_ip_from 2600:3c08::f03c:94ff:fef8:9872;
 set_real_ip_from 2600:3c0a::f03c:94ff:fe5a:3a17;
-set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:4::;
 set_real_ip_from 2602:2e6:0:6::;
 set_real_ip_from 2602:f9f3:0:2::5;
@@ -1082,6 +1080,7 @@ set_real_ip_from 2605:6400:d814:4181::1;
 set_real_ip_from 2605:a140:2186:5418::1;
 set_real_ip_from 2605:aa80:0:9::3;
 set_real_ip_from 2607:5300:201:3100::535e;
+set_real_ip_from 2607:5300:203:b45b::;
 set_real_ip_from 2607:5300:205:200::163a;
 set_real_ip_from 2607:5300:205:200::3dde;
 set_real_ip_from 2607:5300:205:200::4894;
@@ -1501,14 +1500,14 @@ set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.13.195.60;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.42.185.134;
+set_real_ip_from 3.222.140.87;
 set_real_ip_from 35.0.127.52;
-set_real_ip_from 35.207.185.114;
-set_real_ip_from 35.215.211.255;
 set_real_ip_from 37.114.41.119;
 set_real_ip_from 37.1.201.144;
 set_real_ip_from 37.120.190.85;
 set_real_ip_from 37.120.239.59;
 set_real_ip_from 37.187.5.192;
+set_real_ip_from 37.187.74.97;
 set_real_ip_from 37.220.86.167;
 set_real_ip_from 37.228.129.128;
 set_real_ip_from 37.228.129.5;
@@ -1566,7 +1565,6 @@ set_real_ip_from 45.66.35.20;
 set_real_ip_from 45.66.35.21;
 set_real_ip_from 45.66.35.22;
 set_real_ip_from 45.66.35.35;
-set_real_ip_from 45.79.144.222;
 set_real_ip_from 45.79.177.21;
 set_real_ip_from 45.79.50.161;
 set_real_ip_from 45.80.158.205;
