Update lists at 20240722-0900

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -323,6 +323,7 @@ deny 2a02:16d0:0:5::1;
 deny 2a02:2970:1001::4b;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
+deny 2a02:4780:10:16c8::1;
 deny 2a02:898:218::1;
 deny 2a02:898:218::2;
 deny 2a02:c207:3002:8283::1;
@@ -499,7 +500,6 @@ deny 2a0b:f4c2:1::176;
 deny 2a0b:f4c2:1::177;
 deny 2a0b:f4c2:1::178;
 deny 2a0b:f4c2:1::179;
-deny 2a0b:f4c2:1::180;
 deny 2a0b:f4c2:1::181;
 deny 2a0b:f4c2:1::182;
 deny 2a0b:f4c2:1::183;
