--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -199,6 +199,7 @@ allow 172.81.132.94;
 allow 173.249.57.253;
 allow 176.114.248.225;
 allow 176.118.193.33;
+allow 176.121.81.51;
 allow 176.126.253.190;
 allow 176.58.100.98;
 allow 176.58.121.177;
@@ -239,6 +240,7 @@ allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
 allow 181.41.143.246;
+allow 18.233.71.128;
 allow 184.105.48.40;
 allow 184.75.223.203;
 allow 185.100.85.132;
@@ -289,7 +291,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -388,7 +389,6 @@ allow 185.220.101.177;
 allow 185.220.101.178;
 allow 185.220.101.179;
 allow 185.220.101.18;
-allow 185.220.101.180;
 allow 185.220.101.181;
 allow 185.220.101.182;
 allow 185.220.101.183;
@@ -916,15 +916,7 @@ allow 23.154.177.20;
 allow 23.154.177.21;
 allow 23.154.177.22;
 allow 23.154.177.23;
-allow 23.154.177.24;
-allow 23.154.177.25;
-allow 23.154.177.26;
-allow 23.154.177.27;
-allow 23.154.177.28;
-allow 23.154.177.29;
 allow 23.154.177.3;
-allow 23.154.177.30;
-allow 23.154.177.31;
 allow 23.154.177.4;
 allow 23.154.177.5;
 allow 23.154.177.6;
@@ -1153,6 +1145,7 @@ allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
+allow 2a02:4780:10:16c8::1;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c207:3002:8283::1;
@@ -1329,7 +1322,6 @@ allow 2a0b:f4c2:1::176;
 allow 2a0b:f4c2:1::177;
 allow 2a0b:f4c2:1::178;
 allow 2a0b:f4c2:1::179;
-allow 2a0b:f4c2:1::180;
 allow 2a0b:f4c2:1::181;
 allow 2a0b:f4c2:1::182;
 allow 2a0b:f4c2:1::183;
@@ -1496,7 +1488,6 @@ allow 31.129.22.65;
 allow 31.13.195.60;
 allow 31.133.0.210;
 allow 31.42.185.134;
-allow 3.215.51.80;
 allow 35.0.127.52;
 allow 35.207.161.75;
 allow 35.215.223.6;
@@ -1704,6 +1695,7 @@ allow 82.118.242.36;
 allow 82.153.138.119;
 allow 82.153.138.208;
 allow 82.153.138.24;
+allow 82.180.139.38;
 allow 82.197.182.161;
 allow 82.221.128.191;
 allow 82.221.131.5;
