--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -199,6 +199,7 @@ set_real_ip_from 172.81.132.94;
 set_real_ip_from 173.249.57.253;
 set_real_ip_from 176.114.248.225;
 set_real_ip_from 176.118.193.33;
+set_real_ip_from 176.121.81.51;
 set_real_ip_from 176.126.253.190;
 set_real_ip_from 176.58.100.98;
 set_real_ip_from 176.58.121.177;
@@ -239,6 +240,7 @@ set_real_ip_from 179.43.182.232;
 set_real_ip_from 179.43.182.58;
 set_real_ip_from 180.150.226.99;
 set_real_ip_from 181.41.143.246;
+set_real_ip_from 18.233.71.128;
 set_real_ip_from 184.105.48.40;
 set_real_ip_from 184.75.223.203;
 set_real_ip_from 185.100.85.132;
@@ -289,7 +291,6 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
-set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.165.190.111;
 set_real_ip_from 185.170.114.25;
@@ -388,7 +389,6 @@ set_real_ip_from 185.220.101.177;
 set_real_ip_from 185.220.101.178;
 set_real_ip_from 185.220.101.179;
 set_real_ip_from 185.220.101.18;
-set_real_ip_from 185.220.101.180;
 set_real_ip_from 185.220.101.181;
 set_real_ip_from 185.220.101.182;
 set_real_ip_from 185.220.101.183;
@@ -916,15 +916,7 @@ set_real_ip_from 23.154.177.20;
 set_real_ip_from 23.154.177.21;
 set_real_ip_from 23.154.177.22;
 set_real_ip_from 23.154.177.23;
-set_real_ip_from 23.154.177.24;
-set_real_ip_from 23.154.177.25;
-set_real_ip_from 23.154.177.26;
-set_real_ip_from 23.154.177.27;
-set_real_ip_from 23.154.177.28;
-set_real_ip_from 23.154.177.29;
 set_real_ip_from 23.154.177.3;
-set_real_ip_from 23.154.177.30;
-set_real_ip_from 23.154.177.31;
 set_real_ip_from 23.154.177.4;
 set_real_ip_from 23.154.177.5;
 set_real_ip_from 23.154.177.6;
@@ -1153,6 +1145,7 @@ set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
+set_real_ip_from 2a02:4780:10:16c8::1;
 set_real_ip_from 2a02:898:218::1;
 set_real_ip_from 2a02:898:218::2;
 set_real_ip_from 2a02:c207:3002:8283::1;
@@ -1329,7 +1322,6 @@ set_real_ip_from 2a0b:f4c2:1::176;
 set_real_ip_from 2a0b:f4c2:1::177;
 set_real_ip_from 2a0b:f4c2:1::178;
 set_real_ip_from 2a0b:f4c2:1::179;
-set_real_ip_from 2a0b:f4c2:1::180;
 set_real_ip_from 2a0b:f4c2:1::181;
 set_real_ip_from 2a0b:f4c2:1::182;
 set_real_ip_from 2a0b:f4c2:1::183;
@@ -1496,7 +1488,6 @@ set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.13.195.60;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.42.185.134;
-set_real_ip_from 3.215.51.80;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 35.207.161.75;
 set_real_ip_from 35.215.223.6;
@@ -1704,6 +1695,7 @@ set_real_ip_from 82.118.242.36;
 set_real_ip_from 82.153.138.119;
 set_real_ip_from 82.153.138.208;
 set_real_ip_from 82.153.138.24;
+set_real_ip_from 82.180.139.38;
 set_real_ip_from 82.197.182.161;
 set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
