--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -12,6 +12,8 @@ allow 103.208.86.5;
 allow 103.251.167.10;
 allow 103.251.167.20;
 allow 103.28.52.93;
+allow 104.167.242.116;
+allow 104.167.242.117;
 allow 104.192.1.138;
 allow 104.192.3.74;
 allow 104.219.232.126;
@@ -155,7 +157,6 @@ allow 152.53.53.154;
 allow 154.16.116.61;
 allow 154.26.159.157;
 allow 154.30.210.35;
-allow 155.138.161.171;
 allow 156.67.111.146;
 allow 160.119.249.240;
 allow 162.19.230.94;
@@ -240,7 +241,6 @@ allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
 allow 181.41.143.246;
-allow 18.233.71.128;
 allow 184.105.48.40;
 allow 184.75.223.203;
 allow 185.100.85.132;
@@ -291,6 +291,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -389,6 +390,7 @@ allow 185.220.101.177;
 allow 185.220.101.178;
 allow 185.220.101.179;
 allow 185.220.101.18;
+allow 185.220.101.180;
 allow 185.220.101.181;
 allow 185.220.101.182;
 allow 185.220.101.183;
@@ -687,7 +689,6 @@ allow 199.195.253.124;
 allow 199.195.253.156;
 allow 199.195.253.180;
 allow 199.195.253.247;
-allow 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 allow 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 allow 2001:1af8:4060:a01f::12a6;
 allow 2001:1af8:4700:a114:6::1;
@@ -925,6 +926,7 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
+allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.26.133.152;
 allow 23.94.211.25;
@@ -949,6 +951,7 @@ allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
+allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::5;
@@ -958,6 +961,8 @@ allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
 allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
+allow 2602:fccf:310:1::a;
+allow 2602:fccf:310:1::b;
 allow 2602:fef9:100:1100::199;
 allow 2603:c026:c102:5ff:2603:c026:c102:5ff;
 allow 2604:2dc0:202:300::ed3;
@@ -1145,7 +1150,6 @@ allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
-allow 2a02:4780:10:16c8::1;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c207:3002:8283::1;
@@ -1322,6 +1326,7 @@ allow 2a0b:f4c2:1::176;
 allow 2a0b:f4c2:1::177;
 allow 2a0b:f4c2:1::178;
 allow 2a0b:f4c2:1::179;
+allow 2a0b:f4c2:1::180;
 allow 2a0b:f4c2:1::181;
 allow 2a0b:f4c2:1::182;
 allow 2a0b:f4c2:1::183;
@@ -1488,6 +1493,7 @@ allow 31.129.22.65;
 allow 31.13.195.60;
 allow 31.133.0.210;
 allow 31.42.185.134;
+allow 3.214.222.128;
 allow 35.0.127.52;
 allow 35.207.161.75;
 allow 35.215.223.6;
@@ -1695,7 +1701,6 @@ allow 82.118.242.36;
 allow 82.153.138.119;
 allow 82.153.138.208;
 allow 82.153.138.24;
-allow 82.180.139.38;
 allow 82.197.182.161;
 allow 82.221.128.191;
 allow 82.221.131.5;
@@ -1714,7 +1719,6 @@ allow 84.54.51.69;
 allow 85.17.9.83;
 allow 85.204.116.92;
 allow 85.204.116.93;
-allow 85.215.76.62;
 allow 85.239.41.130;
 allow 85.93.218.204;
 allow 86.104.194.13;
