--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -1,4 +1,3 @@
-set_real_ip_from 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 set_real_ip_from 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 set_real_ip_from 2001:1af8:4060:a01f::12a6;
 set_real_ip_from 2001:1af8:4700:a114:6::1;
@@ -128,6 +127,7 @@ set_real_ip_from 2600:3c03::f03c:92ff:fed8:d9ef;
 set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
 set_real_ip_from 2600:3c08::f03c:94ff:fef8:9872;
 set_real_ip_from 2600:3c0a::f03c:94ff:fe5a:3a17;
+set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:4::;
 set_real_ip_from 2602:2e6:0:6::;
 set_real_ip_from 2602:f9f3:0:2::5;
@@ -137,6 +137,8 @@ set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:12:a679::1;
 set_real_ip_from 2602:fc24:19:2b4::1;
 set_real_ip_from 2602:fc24:19:30::1;
+set_real_ip_from 2602:fccf:310:1::a;
+set_real_ip_from 2602:fccf:310:1::b;
 set_real_ip_from 2602:fef9:100:1100::199;
 set_real_ip_from 2603:c026:c102:5ff:2603:c026:c102:5ff;
 set_real_ip_from 2604:2dc0:202:300::ed3;
@@ -323,7 +325,6 @@ set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
-set_real_ip_from 2a02:4780:10:16c8::1;
 set_real_ip_from 2a02:898:218::1;
 set_real_ip_from 2a02:898:218::2;
 set_real_ip_from 2a02:c207:3002:8283::1;
@@ -500,6 +501,7 @@ set_real_ip_from 2a0b:f4c2:1::176;
 set_real_ip_from 2a0b:f4c2:1::177;
 set_real_ip_from 2a0b:f4c2:1::178;
 set_real_ip_from 2a0b:f4c2:1::179;
+set_real_ip_from 2a0b:f4c2:1::180;
 set_real_ip_from 2a0b:f4c2:1::181;
 set_real_ip_from 2a0b:f4c2:1::182;
 set_real_ip_from 2a0b:f4c2:1::183;
