--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -156,6 +156,7 @@ allow 152.53.53.154;
 allow 154.16.116.61;
 allow 154.26.159.157;
 allow 154.30.210.35;
+allow 155.138.161.171;
 allow 156.67.111.146;
 allow 160.119.249.240;
 allow 162.19.230.94;
@@ -241,6 +242,7 @@ allow 180.150.226.99;
 allow 181.41.143.236;
 allow 181.41.143.246;
 allow 181.41.143.247;
+allow 18.232.11.51;
 allow 184.105.48.40;
 allow 184.75.223.203;
 allow 185.100.85.132;
@@ -527,6 +529,7 @@ allow 185.246.188.74;
 allow 185.246.189.77;
 allow 185.246.189.99;
 allow 185.246.86.197;
+allow 185.247.184.105;
 allow 185.247.184.33;
 allow 185.252.232.218;
 allow 185.254.196.141;
@@ -631,7 +634,6 @@ allow 193.218.118.161;
 allow 193.218.118.173;
 allow 193.218.118.178;
 allow 193.218.118.182;
-allow 193.218.118.188;
 allow 193.218.118.89;
 allow 193.233.133.109;
 allow 193.239.232.230;
@@ -689,6 +691,7 @@ allow 199.195.253.124;
 allow 199.195.253.156;
 allow 199.195.253.180;
 allow 199.195.253.247;
+allow 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 allow 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 allow 2001:1af8:4060:a01f::12a6;
 allow 2001:1af8:4700:a114:6::1;
@@ -1160,7 +1163,6 @@ allow 2a02:29b8:dc01:1801::3;
 allow 2a02:29b8:dc01:1801:42:51ff:fe11:143a;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
-allow 2a02:4780:10:16c8::1;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c207:3002:8283::1;
@@ -1247,6 +1249,7 @@ allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
 allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
+allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:541:121:33::1;
 allow 2a05:541:141:2c::1;
@@ -1479,7 +1482,6 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
-allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:8398:111f:f05a:ac07;
 allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
@@ -1560,6 +1562,7 @@ allow 45.141.215.90;
 allow 45.141.215.95;
 allow 45.141.215.97;
 allow 45.148.10.111;
+allow 45.148.10.169;
 allow 45.15.157.177;
 allow 45.61.185.172;
 allow 45.61.186.203;
@@ -1615,7 +1618,6 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
-allow 52.207.171.23;
 allow 5.255.100.219;
 allow 5.255.100.26;
 allow 5.255.103.190;
@@ -1713,7 +1715,6 @@ allow 82.118.242.36;
 allow 82.153.138.119;
 allow 82.153.138.208;
 allow 82.153.138.24;
-allow 82.180.139.38;
 allow 82.197.182.161;
 allow 82.221.128.191;
 allow 82.221.131.5;
