--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -1,3 +1,4 @@
+allow 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 allow 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 allow 2001:1af8:4060:a01f::12a6;
 allow 2001:1af8:4700:a114:6::1;
@@ -327,7 +328,6 @@ allow 2a02:29b8:dc01:1801::3;
 allow 2a02:29b8:dc01:1801:42:51ff:fe11:143a;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
-allow 2a02:4780:10:16c8::1;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c207:3002:8283::1;
@@ -414,6 +414,7 @@ allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
 allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
+allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:541:121:33::1;
 allow 2a05:541:141:2c::1;
@@ -646,7 +647,6 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
-allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:8398:111f:f05a:ac07;
 allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
