--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -156,6 +156,7 @@ set_real_ip_from 152.53.53.154;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 154.26.159.157;
 set_real_ip_from 154.30.210.35;
+set_real_ip_from 155.138.161.171;
 set_real_ip_from 156.67.111.146;
 set_real_ip_from 160.119.249.240;
 set_real_ip_from 162.19.230.94;
@@ -241,6 +242,7 @@ set_real_ip_from 180.150.226.99;
 set_real_ip_from 181.41.143.236;
 set_real_ip_from 181.41.143.246;
 set_real_ip_from 181.41.143.247;
+set_real_ip_from 18.232.11.51;
 set_real_ip_from 184.105.48.40;
 set_real_ip_from 184.75.223.203;
 set_real_ip_from 185.100.85.132;
@@ -527,6 +529,7 @@ set_real_ip_from 185.246.188.74;
 set_real_ip_from 185.246.189.77;
 set_real_ip_from 185.246.189.99;
 set_real_ip_from 185.246.86.197;
+set_real_ip_from 185.247.184.105;
 set_real_ip_from 185.247.184.33;
 set_real_ip_from 185.252.232.218;
 set_real_ip_from 185.254.196.141;
@@ -631,7 +634,6 @@ set_real_ip_from 193.218.118.161;
 set_real_ip_from 193.218.118.173;
 set_real_ip_from 193.218.118.178;
 set_real_ip_from 193.218.118.182;
-set_real_ip_from 193.218.118.188;
 set_real_ip_from 193.218.118.89;
 set_real_ip_from 193.233.133.109;
 set_real_ip_from 193.239.232.230;
@@ -689,6 +691,7 @@ set_real_ip_from 199.195.253.124;
 set_real_ip_from 199.195.253.156;
 set_real_ip_from 199.195.253.180;
 set_real_ip_from 199.195.253.247;
+set_real_ip_from 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 set_real_ip_from 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 set_real_ip_from 2001:1af8:4060:a01f::12a6;
 set_real_ip_from 2001:1af8:4700:a114:6::1;
@@ -1160,7 +1163,6 @@ set_real_ip_from 2a02:29b8:dc01:1801::3;
 set_real_ip_from 2a02:29b8:dc01:1801:42:51ff:fe11:143a;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
-set_real_ip_from 2a02:4780:10:16c8::1;
 set_real_ip_from 2a02:898:218::1;
 set_real_ip_from 2a02:898:218::2;
 set_real_ip_from 2a02:c207:3002:8283::1;
@@ -1247,6 +1249,7 @@ set_real_ip_from 2a04:52c0:130:896e::1;
 set_real_ip_from 2a04:52c0:130:d285::1;
 set_real_ip_from 2a04:9dc0:31::c0cc:4d;
 set_real_ip_from 2a05:541:110:20::1;
+set_real_ip_from 2a05:541:110:3e::1;
 set_real_ip_from 2a05:541:112:31::1;
 set_real_ip_from 2a05:541:121:33::1;
 set_real_ip_from 2a05:541:141:2c::1;
@@ -1479,7 +1482,6 @@ set_real_ip_from 2a0f:df00:0:255::205;
 set_real_ip_from 2a0f:df00:0:255::206;
 set_real_ip_from 2a0f:e586:f:f::133;
 set_real_ip_from 2a0f:e586:f:f::182;
-set_real_ip_from 2a0f:e586:f:f::188;
 set_real_ip_from 2a0f:e586:f:f:8398:111f:f05a:ac07;
 set_real_ip_from 2a0f:e586:f:f:a052:2166:bef9:a432;
 set_real_ip_from 2a0f:e586:f:f:baa4:d491:90be:dca5;
@@ -1560,6 +1562,7 @@ set_real_ip_from 45.141.215.90;
 set_real_ip_from 45.141.215.95;
 set_real_ip_from 45.141.215.97;
 set_real_ip_from 45.148.10.111;
+set_real_ip_from 45.148.10.169;
 set_real_ip_from 45.15.157.177;
 set_real_ip_from 45.61.185.172;
 set_real_ip_from 45.61.186.203;
@@ -1615,7 +1618,6 @@ set_real_ip_from 51.89.153.112;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
-set_real_ip_from 52.207.171.23;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.103.190;
@@ -1713,7 +1715,6 @@ set_real_ip_from 82.118.242.36;
 set_real_ip_from 82.153.138.119;
 set_real_ip_from 82.153.138.208;
 set_real_ip_from 82.153.138.24;
-set_real_ip_from 82.180.139.38;
 set_real_ip_from 82.197.182.161;
 set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
