--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -72,6 +72,7 @@ set_real_ip_from 107.189.5.19;
 set_real_ip_from 107.189.5.7;
 set_real_ip_from 107.189.6.124;
 set_real_ip_from 107.189.6.246;
+set_real_ip_from 107.189.6.36;
 set_real_ip_from 107.189.7.114;
 set_real_ip_from 107.189.7.141;
 set_real_ip_from 107.189.7.144;
@@ -156,6 +157,7 @@ set_real_ip_from 152.53.53.154;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 154.26.159.157;
 set_real_ip_from 154.30.210.35;
+set_real_ip_from 155.138.161.171;
 set_real_ip_from 156.67.111.146;
 set_real_ip_from 160.119.249.240;
 set_real_ip_from 162.19.230.94;
@@ -291,7 +293,6 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
-set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.165.190.111;
 set_real_ip_from 185.170.114.25;
@@ -690,6 +691,7 @@ set_real_ip_from 199.195.253.124;
 set_real_ip_from 199.195.253.156;
 set_real_ip_from 199.195.253.180;
 set_real_ip_from 199.195.253.247;
+set_real_ip_from 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 set_real_ip_from 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 set_real_ip_from 2001:1af8:4060:a01f::12a6;
 set_real_ip_from 2001:1af8:4700:a114:6::1;
@@ -849,6 +851,7 @@ set_real_ip_from 209.141.55.26;
 set_real_ip_from 209.141.59.116;
 set_real_ip_from 209.141.62.71;
 set_real_ip_from 212.21.66.6;
+set_real_ip_from 212.69.167.80;
 set_real_ip_from 212.73.134.204;
 set_real_ip_from 212.95.50.77;
 set_real_ip_from 212.95.52.76;
@@ -1053,6 +1056,7 @@ set_real_ip_from 2605:6400:30:f330:61ea:72a8:8aea:fa1f;
 set_real_ip_from 2605:6400:30:f38b:28b3:cd24:51f3:e412;
 set_real_ip_from 2605:6400:30:f414:42ce:c612:dab8:1337;
 set_real_ip_from 2605:6400:30:f440:757e:adf1:55f7:5a31;
+set_real_ip_from 2605:6400:30:f44f:1::;
 set_real_ip_from 2605:6400:30:f49b:e2ee:34f8:c854:6f63;
 set_real_ip_from 2605:6400:30:f4ae:8f7b:cc6e:d1d7:b978;
 set_real_ip_from 2605:6400:30:f503::1;
@@ -1508,7 +1512,6 @@ set_real_ip_from 31.13.195.60;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.42.185.134;
 set_real_ip_from 35.0.127.52;
-set_real_ip_from 35.169.55.211;
 set_real_ip_from 35.215.223.6;
 set_real_ip_from 37.114.41.119;
 set_real_ip_from 37.1.201.144;
@@ -1524,8 +1527,9 @@ set_real_ip_from 37.252.254.33;
 set_real_ip_from 37.252.255.135;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
-set_real_ip_from 38.97.116.244;
 set_real_ip_from 41.216.183.87;
+set_real_ip_from 43.157.40.39;
+set_real_ip_from 44.193.114.217;
 set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
@@ -1596,6 +1600,7 @@ set_real_ip_from 45.95.169.255;
 set_real_ip_from 46.165.243.36;
 set_real_ip_from 46.182.21.248;
 set_real_ip_from 46.195.104.6;
+set_real_ip_from 46.226.164.14;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
 set_real_ip_from 46.38.255.27;
