Update lists at 20240724-0900

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -111,6 +111,7 @@ allow 109.70.100.70;
 allow 109.70.100.71;
 allow 118.163.74.160;
 allow 121.160.200.13;
+allow 121.78.28.175;
 allow 123.253.35.32;
 allow 125.212.241.131;
 allow 125.253.41.169;
@@ -293,6 +294,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -1141,6 +1143,7 @@ allow 2a00:11c0:1b:aa2::5;
 allow 2a00:11c0:1c:311::5;
 allow 2a00:11c0:1f:1::55;
 allow 2a00:1728:f:f:f:f:c03c:9898;
+allow 2a00:19a0:3:d0:0:252e:d06d:1;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12f::c754;
@@ -1509,6 +1512,7 @@ allow 31.129.22.65;
 allow 31.13.195.60;
 allow 31.133.0.210;
 allow 31.42.185.134;
+allow 3.208.212.112;
 allow 35.0.127.52;
 allow 35.215.223.6;
 allow 37.114.41.119;
@@ -1523,12 +1527,12 @@ allow 37.228.129.5;
 allow 37.228.129.63;
 allow 37.252.254.33;
 allow 37.252.255.135;
+allow 37.46.208.109;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
 allow 41.216.183.87;
 allow 43.157.40.39;
-allow 44.215.254.177;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
