--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -305,6 +305,7 @@ allow 2a00:11c0:1b:aa2::5;
 allow 2a00:11c0:1c:311::5;
 allow 2a00:11c0:1f:1::55;
 allow 2a00:1728:f:f:f:f:c03c:9898;
+allow 2a00:19a0:3:d0:0:252e:d06d:1;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12f::c754;
