Update lists at 20240724-1500

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -302,7 +302,6 @@ allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
 allow 185.177.151.34;
-allow 185.181.60.135;
 allow 185.181.61.115;
 allow 185.181.61.142;
 allow 185.183.157.214;
@@ -1150,6 +1149,9 @@ allow 2a00:11c0:1c:311::5;
 allow 2a00:11c0:1f:1::55;
 allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:19a0:3:d0:0:252e:d06d:1;
+allow 2a00:19a0:3:d3:0:252e:d315:1;
+allow 2a00:19a0:3:d3:0:252e:d317:1;
+allow 2a00:19a0:3:d3:0:252e:d318:1;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12f::c754;
@@ -1519,7 +1521,6 @@ allow 31.13.195.60;
 allow 31.133.0.210;
 allow 31.42.185.134;
 allow 35.0.127.52;
-allow 35.215.223.6;
 allow 37.114.41.119;
 allow 37.1.201.144;
 allow 37.120.190.85;
@@ -1533,11 +1534,15 @@ allow 37.228.129.63;
 allow 37.252.254.33;
 allow 37.252.255.135;
 allow 37.46.208.109;
+allow 37.46.211.21;
+allow 37.46.211.23;
+allow 37.46.211.24;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
 allow 41.216.183.87;
 allow 43.157.40.39;
+allow 44.205.182.60;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1613,7 +1618,6 @@ allow 46.232.251.191;
 allow 46.234.47.105;
 allow 46.38.255.27;
 allow 47.250.38.29;
-allow 50.19.135.211;
 allow 5.104.86.6;
 allow 51.15.59.15;
 allow 51.178.45.216;
