--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -307,6 +307,9 @@ deny 2a00:11c0:1c:311::5;
 deny 2a00:11c0:1f:1::55;
 deny 2a00:1728:f:f:f:f:c03c:9898;
 deny 2a00:19a0:3:d0:0:252e:d06d:1;
+deny 2a00:19a0:3:d3:0:252e:d315:1;
+deny 2a00:19a0:3:d3:0:252e:d317:1;
+deny 2a00:19a0:3:d3:0:252e:d318:1;
 deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:12f::c754;
