--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -307,6 +307,9 @@ set_real_ip_from 2a00:11c0:1c:311::5;
 set_real_ip_from 2a00:11c0:1f:1::55;
 set_real_ip_from 2a00:1728:f:f:f:f:c03c:9898;
 set_real_ip_from 2a00:19a0:3:d0:0:252e:d06d:1;
+set_real_ip_from 2a00:19a0:3:d3:0:252e:d315:1;
+set_real_ip_from 2a00:19a0:3:d3:0:252e:d317:1;
+set_real_ip_from 2a00:19a0:3:d3:0:252e:d318:1;
 set_real_ip_from 2a00:1b88:4::2;
 set_real_ip_from 2a00:1b88:4::4;
 set_real_ip_from 2a00:1dc0:caff:12f::c754;
