Update lists at 20240726-1200

--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -131,6 +131,7 @@ set_real_ip_from 2600:3c08::f03c:94ff:fef8:9872;
 set_real_ip_from 2600:3c0a::f03c:94ff:fe5a:3a17;
 set_real_ip_from 2602:2da:0:32:5054:ff:fe6c:39dc;
 set_real_ip_from 2602:2da:0:32:5054:ff:fe7e:7c21;
+set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:4::;
 set_real_ip_from 2602:2e6:0:6::;
 set_real_ip_from 2602:f9f3:0:2::5;
@@ -285,6 +286,16 @@ set_real_ip_from 2620:18c:0:192::171;
 set_real_ip_from 2620:18c:0:192::172;
 set_real_ip_from 2620:18c:0:192::173;
 set_real_ip_from 2620:18c:0:192::174;
+set_real_ip_from 2620:18c:0:192::175;
+set_real_ip_from 2620:18c:0:192::176;
+set_real_ip_from 2620:18c:0:192::177;
+set_real_ip_from 2620:18c:0:192::178;
+set_real_ip_from 2620:18c:0:192::179;
+set_real_ip_from 2620:18c:0:192::180;
+set_real_ip_from 2620:18c:0:192::181;
+set_real_ip_from 2620:18c:0:192::182;
+set_real_ip_from 2620:18c:0:192::183;
+set_real_ip_from 2620:18c:0:192::184;
 set_real_ip_from 2620:18c:0:192::211;
 set_real_ip_from 2620:18c:0:192::212;
 set_real_ip_from 2620:18c:0:192::213;
