--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -297,7 +297,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -642,8 +641,6 @@ allow 193.218.118.188;
 allow 193.218.118.89;
 allow 193.233.133.109;
 allow 193.239.232.230;
-allow 193.26.115.43;
-allow 193.26.115.61;
 allow 193.70.80.213;
 allow 194.15.112.133;
 allow 194.15.113.118;
@@ -890,6 +887,16 @@ allow 23.129.64.171;
 allow 23.129.64.172;
 allow 23.129.64.173;
 allow 23.129.64.174;
+allow 23.129.64.175;
+allow 23.129.64.176;
+allow 23.129.64.177;
+allow 23.129.64.178;
+allow 23.129.64.179;
+allow 23.129.64.180;
+allow 23.129.64.181;
+allow 23.129.64.182;
+allow 23.129.64.183;
+allow 23.129.64.184;
 allow 23.129.64.211;
 allow 23.129.64.212;
 allow 23.129.64.213;
@@ -951,6 +958,7 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
+allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.26.133.152;
 allow 23.94.211.25;
@@ -977,6 +985,7 @@ allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
 allow 2602:2da:0:32:5054:ff:fe6c:39dc;
 allow 2602:2da:0:32:5054:ff:fe7e:7c21;
+allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::5;
@@ -1131,6 +1140,16 @@ allow 2620:18c:0:192::171;
 allow 2620:18c:0:192::172;
 allow 2620:18c:0:192::173;
 allow 2620:18c:0:192::174;
+allow 2620:18c:0:192::175;
+allow 2620:18c:0:192::176;
+allow 2620:18c:0:192::177;
+allow 2620:18c:0:192::178;
+allow 2620:18c:0:192::179;
+allow 2620:18c:0:192::180;
+allow 2620:18c:0:192::181;
+allow 2620:18c:0:192::182;
+allow 2620:18c:0:192::183;
+allow 2620:18c:0:192::184;
 allow 2620:18c:0:192::211;
 allow 2620:18c:0:192::212;
 allow 2620:18c:0:192::213;
@@ -1553,8 +1572,8 @@ allow 37.46.211.24;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
-allow 3.92.41.112;
 allow 43.157.40.39;
+allow 44.216.62.32;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
