--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -131,6 +131,7 @@ allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
 allow 2602:2da:0:32:5054:ff:fe6c:39dc;
 allow 2602:2da:0:32:5054:ff:fe7e:7c21;
+allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::5;
@@ -285,6 +286,16 @@ allow 2620:18c:0:192::171;
 allow 2620:18c:0:192::172;
 allow 2620:18c:0:192::173;
 allow 2620:18c:0:192::174;
+allow 2620:18c:0:192::175;
+allow 2620:18c:0:192::176;
+allow 2620:18c:0:192::177;
+allow 2620:18c:0:192::178;
+allow 2620:18c:0:192::179;
+allow 2620:18c:0:192::180;
+allow 2620:18c:0:192::181;
+allow 2620:18c:0:192::182;
+allow 2620:18c:0:192::183;
+allow 2620:18c:0:192::184;
 allow 2620:18c:0:192::211;
 allow 2620:18c:0:192::212;
 allow 2620:18c:0:192::213;
